fix overflow

--- a/main.css
+++ b/main.css
@@ -11,41 +11,60 @@ body, html {
 }
 #input {
     color: transparent;
-    background-color: transparent;
-    caret-color: white;
-
+    background: none;
+    caret-color: rgb(160, 160, 160);
+}
+#syntax {
+    word-wrap: none;
+    white-space: nowrap;
+    overflow: hidden;
+    
+    
+}
+#syntax div {
+    
+}
+#input, .scroll_outer {
+    
+    
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    background-color: transparent;
 }
 #syntax {
-    color: white;
-    background-color: #2C3031;
+    overflow: visible;
 }
 #input, #syntax {
+
+    display: block;
     outline: none;
     border: none;
     width: 100%;
     height: 100%;
     resize: none;
     margin: 0;
-    
     padding: 0;
+    padding: 20px;
     box-sizing: border-box;
     font-size: 30px;
+    line-height: 35px;
     font-family: inherit;
-    padding: 20px;
-    overflow: hidden;
     word-wrap: none;
     white-space: nowrap;
+    
 }
 
 #input_wrap {
     box-sizing: border-box;
     resize: none;
-    overflow: auto;
+    overflow: hidden;
     position: relative;
     flex: none;
+    height: 150px;
+    width: 100%;
+    display: block;
 }
 #output {
     padding: 20px;
